--- a/scr/css/styles.css
+++ b/scr/css/styles.css
@@ -69,3 +69,20 @@ header {
   max-width: 115px;
   height: 65px;
 }
+/* end header */
+/* projects */
+.projects__banner {
+  width: 100%;
+  height: 308px;
+  background-color: #0050d8;
+  background-image: repeating-linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.05) 0,
+    rgba(255, 255, 255, 0.05) 20px,
+    transparent 20px,
+    transparent 40px
+  );
+  background-repeat: repeat;
+  background-size: auto;
+}
+/* end projects */
